--- a/src/pages/ProductPage/Products.css
+++ b/src/pages/ProductPage/Products.css
@@ -11,3 +11,22 @@ form {
     flex-direction: column;
     align-items: center;
 }
+
+img {
+    width: 100px;
+}
+
+.productCard {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+}
+
+.productInfo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
