--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
-nav {
+.navbar {
     height: 40px;
     padding: 15px;
-    background-color: rgba(139, 187, 187, 0.74);
+    background-color: rgba(206, 211, 211, 0.74);
     display: flex;
     justify-content: space-between;
     align-items: center;
