--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,8 +1,9 @@
 .navbar {
-    height: 40px;
-    padding: 15px;
+    height: 30px;
+    padding: 20px;
+    padding-left: 50px;
     background-color: rgba(206, 211, 211, 0.74);
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
 }
