--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,11 @@
 .navbar {
-    height: 30px;
-    padding: 20px;
+    height: 20px;
+    padding: 10px;
     padding-left: 50px;
-    background-color: rgba(206, 211, 211, 0.74);
+    background-color: rgba(141, 147, 147, 0.74);
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
