--- a/src/pages/HomePage/homepage.css
+++ b/src/pages/HomePage/homepage.css
@@ -1,7 +1,13 @@
-.stockistPage {
+.homepage {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     margin: 50px;
+}
+
+.login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
