--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -3,11 +3,16 @@
     flex-direction: row;
 }
 
+.about {
+    margin: 50px;
+    padding: 10px;
+}
+
 .cataloguesHome {
     width: 600px;
     padding: 50px;
     margin: 50px;
-    background-color: rgba(139, 187, 187, 0.74);
+    border: 1px solid rgb(46, 159, 235);
     display: flex;
     flex-direction: column;
     justify-content: center;
