--- a/src/pages/CataloguePages/CataloguePages.css
+++ b/src/pages/CataloguePages/CataloguePages.css
@@ -110,3 +110,38 @@
 .searchStockist {
     margin: 20px;
 }
+
+.formTitle {
+    display: flex;
+    flex-direction: row;
+}
+
+.catalogueCover {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 50px auto;
+}
+
+.coverLayout {
+    width: 800px;
+    height: 400px;
+    margin: 10 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+
+.imageCover {
+    height: 400px;
+    width: auto;
+    margin: 10 auto;
+    
+}
+
+.coverTitle {
+    position: relative;
+}
