--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -1,6 +1,7 @@
 .profilePage {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .about {
@@ -12,7 +13,7 @@
     width: 600px;
     padding: 50px;
     margin: 50px;
-    border: 1px solid rgb(46, 159, 235);
+    border: 1px solid rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -20,9 +21,18 @@
 }  
 
 .cardsHome {
+    padding: 50px;
+    margin: 30px;
+    border: 1px solid rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 300px;
+    height: 40px;
+}
+
+.home2 {
+    display: flex;
+    flex-direction: column;
 }
