--- a/src/pages/StockistPage/StockistPage.css
+++ b/src/pages/StockistPage/StockistPage.css
@@ -5,3 +5,13 @@
     align-items: center;
     margin: 50px;
 }
+
+.stockistList {
+    margin: 10px;
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow:rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
