--- a/src/pages/ProfilePage/ProfilePage.css
+++ b/src/pages/ProfilePage/ProfilePage.css
@@ -2,6 +2,16 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+.home2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 100%;
+    width: 30%;
 }
 
 .about {
@@ -10,29 +20,20 @@
 }
 
 .cataloguesHome {
-    width: 600px;
-    padding: 50px;
-    margin: 50px;
-    border: 1px solid rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}  
-
-.cardsHome {
-    padding: 50px;
-    margin: 30px;
-    border: 1px solid rgb(0, 0, 0);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 300px;
-    height: 40px;
+    border-right: 1px solid #000;
+    height: 100%;
+    width: 100%;
 }
 
-.home2 {
+.cardsHome {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
