--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,11 +1,17 @@
+@use './mixins.scss' as m;
+@import './variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,600;1,700&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
 
 html, body {
   text-align: center;
   font-family: 'Cormorant Garamond', serif;
   font-weight: 600;
   margin: 0;
-  box-sizing: border-box;
 }
 
 h1 {
@@ -80,27 +86,4 @@ button:focus:not(:active) {
   box-shadow: rgba(72, 95, 199, .25) 0 0 0 .125em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 
