--- a/src/pages/ProductPage/Products.css
+++ b/src/pages/ProductPage/Products.css
@@ -16,12 +16,17 @@ img {
     margin: 5px;
 }
 
+.productContainer {
+    width: 100%;
+    display: grid;
+}
+
 .productCard {
     margin: 10px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     box-shadow:rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
