--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 @mixin flex($direction, $justify) {
   display: flex;
   flex-direction: $direction;
@@ -32,4 +34,22 @@
   @media screen and (max-width: 395px) {
     @content;
   }
+}
+
+
+
+@mixin bigTab {
+  align-items: center;
+  height: 80px;
+  width: 100%;
+  padding-left: 20px;
+  border-bottom: $line;
+}
+
+@mixin smallTab {
+  align-items: center;
+  height: 40px;
+  width: 100%;
+  padding-left: 20px;
+  border-bottom: $line;
 }
