--- a/src/components/auth/styles.module.scss
+++ b/src/components/auth/styles.module.scss
@@ -4,10 +4,20 @@
 .form {
 
   input {
-    background-color: transparent !important;
+    background-color: none;
     padding-left: 20px;
     margin: 0;
   }
+  /* Cor de fundo do autocomplete */
+  input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 30px $backgroundColor inset;
+  }
+
+  /* Cor do texto do autocomplete */
+  input:-webkit-autofill {
+      -webkit-text-fill-color: $primaryColor !important;
+  }
+
   span {
     cursor: pointer;
     margin-left: 2px;
@@ -20,6 +30,12 @@
 }
 
 .smallTab {
-  @include m.flex(row, flex-start);
+  @include m.flex(row, center);
   @include m.smallTab();
+
+  button{
+    border: $line;
+    width: fit-content;
+    height: 18px;
+  }
 }
