--- a/src/components/general/Navbar/styles.module.scss
+++ b/src/components/general/Navbar/styles.module.scss
@@ -19,9 +19,10 @@
     }
 
     .navItem2 {
-        @include m.flex(row, space-around);
+        @include m.flex(row, flex-start);
         align-items: center;
         width: 65%;
         padding-left: 20px;
+        gap: 20px;
     }
 }
