adds tooltip and some styling

--- a/src/components/general/Navbar/styles.module.scss
+++ b/src/components/general/Navbar/styles.module.scss
@@ -26,3 +26,22 @@
         gap: 20px;
     }
 }
+
+.tooltip {
+    position:relative; 
+
+    :before {
+        content: 'Logout?'; 
+        position:absolute;
+        top:50%;
+        transform:translateY(-50%);
+        left:100%;
+        padding:20px;
+        text-align:center;
+        color: $primaryColor;
+        display:none; 
+      }
+      :hover:before {
+        display:block;
+      }
+  }
