responsive home page

--- a/src/components/auth/styles.module.scss
+++ b/src/components/auth/styles.module.scss
@@ -38,4 +38,10 @@
     width: fit-content;
     height: 18px;
   }
+
+  @include m.mobile {
+    flex-direction: column;
+    height: fit-content;
+    padding: 6px 0;
+  }
 }
